# thesis-ctmlm-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: run_standard_experiments.py
notebooks/: 07C_python_ctmlm_package_development.ipynb
src/thesis_ctmlm/: __init__.py  constants.py  diagnostics.py  experiments.py  model.py  parameters.py  thermodynamics.py
tests/: test_model.py  test_thermodynamics.py
