[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-ctmlm"
version = "0.1.0"
description = "Simplified cloud-topped mixed-layer model for ERA5-guided thesis experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Raghab Pokhrel" }
]
keywords = ["climate", "stratocumulus", "mixed-layer", "ERA5", "subsidence"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "jupyter>=1.0",
  "ipykernel>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
